--- a/calendar noel/calendar noel.csproj
+++ b/calendar noel/calendar noel.csproj
@@ -122,7 +122,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\snow_background.png" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\image-calendrier-avent-menu.jpg" />
   </ItemGroup>
